# rust-practice

./: .gitignore  README.md
02 blog/: Cargo.toml
02 blog/posts/portobello-mushroom-burger/: post.md  post_frontmatter.toml
02 blog/src/: lib.rs  main.rs
02 blog/src/handlers/: home_handler.rs  post_handler.rs
02 blog/static/css/: index.css
02 blog/tailwind/: package.json  tailwind.config.js
02 blog/templates/: base.html  home.html  post.html
03 web_task_service/: Cargo.toml
03 web_task_service/src/: main.rs
03 web_task_service/src/api/: task.rs
03 web_task_service/src/model/: task.rs
04 text_editor/: Cargo.toml  lskjdflsdkf
04 text_editor/src/: document.rs  editor.rs  main.rs  row.rs  terminal.rs
05 chess/src/: board.rs  main.rs
06 game_engine/: Cargo.toml
07 trading_bot/: Cargo.toml
07 trading_bot/src/: main.rs
07 trading_bot/src/api/: mod.rs  order.rs  stream_data.rs
08 return_change/: Cargo.toml
08 return_change/src/: main.rs
09 rock_paper_scissor/: Cargo.toml
09 rock_paper_scissor/src/: main.rs
10 fibonacci_sequence/src/: main.rs
