[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.25.1"
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
env_logger = "0.9.3"
num-decimal = "0.2.5"